[project]
name = "cement"
description = "Application Framework for Python"
readme = "README.md"
keywords = [
    "python",
    "module",
    "cli framework"
]
authors=[{name = "Data Folk Labs, LLC", email= "derks@datafolklabs.com"}]
license={file="LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]

dynamic = ["version", "README"]

requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
alarm = []
argparse = []
colorlog = ["colorlog"]
configparser = []
daemon = []
docs = ["sphinx", "sphinx_rtd_theme", "guzzle_sphinx_theme", "sphinxcontrib-napoleon"]
dummy = []
generate = ["pyYaml"]
jinja2 = ["jinja2"]
json = []
logging = []
memcached = ["pylibmc"]
mustache = ["pystache"]
plugin = []
print = []
redis = ["redis"]
scrub = []
smtp = []
tabulate = ["tabulate"]
watchdog = ["watchdog"]
yaml = ["pyYaml"]
cli = ["cement[yaml,jinja2]"]

[project.scripts]
cement = "cement.cli.main:main"

[project.urls]
homepage = "https://builtoncement.com"
documentation = "https://docs.builtoncement.com"
repository = "https://github.com/datafolklabs/cement"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

###############
# DEVELOPMENT #
###############

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov-report=term --cov-report=html:coverage-report --cov-fail-under=100 --capture=sys tests/"
python_files= "test_*.py"

[tool.coverage.run]
# AUDIT POINT (Phase 2 D-12): explicit measurement boundary mirrors
# ruff `exclude` discipline. Re-review if files are added under
# cement/cli/templates/ or cement/cli/contrib/ that should be
# measured.
source = ["cement"]
omit = [
    "cement/cli/templates/*",
    "cement/cli/contrib/*",
]

[tool.coverage.report]
# AUDIT POINT (Phase 2 D-10/D-11): fail_under = 100 is the absolute
# coverage gate. Belt-and-braces: pytest addopts also passes
# --cov-fail-under=100 in case future pytest-cov bumps change
# pyproject discovery semantics.
precision = 2
fail_under = 100


[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
exclude = [
    ".git",
    "cement/cli/templates",
    "cement/cli/contrib"
]
include = [
    "cement/**/*.py",
    "tests/**/*.py"
]

[tool.ruff.lint]
# AUDIT POINT (D-08, Phase 03 D-06): re-review on every ruff bump. New
# rules added by ruff to a selected family fire as CI failures. The
# UP and FA families (Phase 03) are the highest-churn surfaces — a
# UP rule graduating from preview lands as a deliberate config
# decision, not silent CI red. See Phase 1 RESEARCH.md + Phase 03 D-06.
preview = false
extend-select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear (NEW, D-06)
    "I",   # isort (NEW, D-06)
    "A",   # flake8-builtins (NEW, D-06)
    "C90", # mccabe complexity (NEW, D-06)
    "N",   # pep8-naming (NEW, D-06)
    "PT",  # flake8-pytest-style (NEW, D-06)
    "T20", # flake8-print (NEW, D-06)
    "YTT", # flake8-2020 (NEW, D-06)
    "UP",  # pyupgrade (NEW, Phase 03 D-06; lifts Phase 1 D-07 UP ban)
    "FA",  # flake8-future-annotations (NEW, Phase 03 D-06; mechanizes
           # `from __future__ import annotations` removal — D-08)
]
ignore = [
    # AUDIT POINT (D-08): each entry MUST have a one-line justification.
    # Empty list is the green-baseline goal.
    "A001",  # framework intentionally shadows builtins (`format`,
             # `vars`, `dir`, etc.) in handler/Meta locals matching
             # Python stdlib conventions (e.g., logging.Formatter
             # `format` argument). D-13 strict-minimum + 3.0.x
             # no-breakage rule. Justified 2026-04-30 Phase 1.
    "A002",  # ditto for argument-shadowing in subclass-exposed
             # Handler method signatures (e.g., LoggingLogHandler
             # `_get_console_formatter(self, format)` is a subclass
             # contract — see ColorLogHandler). Justified 2026-04-30.
    "C901",  # cement framework is intentionally complex
             # (handler/interface dispatch, lifecycle hooks,
             # extension loading). Phase 3 REFACTOR-01/02 will
             # re-evaluate. Justified 2026-04-30 Phase 1.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# AUDIT POINT (D-08): per-file-ignores require one-line justification.
"tests/**/*.py" = [
    "N806",  # test-fixture variable casing (META, DEBUG_FORMAT, Log,
             # MyLog) is intentional. Justified 2026-04-30 Phase 1.
    "N805",  # subclass-pattern test methods omit `self` deliberately
             # to verify framework behavior. Justified 2026-04-30.
    "PT012", # `pytest.raises()` blocks intentionally wrap multi-step
             # setup-then-trigger-then-assert sequences; refactoring is
             # Phase 3 test-modernization work (D-13 strict-minimum).
             # Justified 2026-04-30 Phase 1.
    "PT013", # `from pytest import raises` is the existing cement
             # test convention (cited at tests/core/test_exc.py).
             # Mass-rewriting to `import pytest` exceeds D-13
             # strict-minimum. Justified 2026-04-30 Phase 1.
]

# ignore = [
#     "E402",
#     "E713",
#     "E721",
#     "E714",
#     "F841",
#     "F507"
# ]

# TBD
# [tool.ruff.format]
# quote-style = "single"

# [[tool.mypy.overrides]]
# module = "cement.*"
# ignore_missing_imports = true

[tool.mypy]
python_version = "3.10"
# AUDIT POINT (D-08+D-11): strictness knobs are deliberately enumerated,
# NOT `strict = true`. Adding a knob is a deliberate decision; mypy
# bumps that introduce new strict defaults will fail CI and force the
# same audit conversation as ruff. See Phase 1 RESEARCH.md.
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

disable_error_code = [
    # disable as MetaMixin/Meta is used everywhere and triggers this
    "attr-defined",
]

files = [
    "cement/",
    # "tests/"
]
exclude = """(?x)(
    ^cement/cli/templates |
    ^.git/ |
    ^tests
  )"""

[tool.pdm.scripts]
cement = {call = "cement.cli.main:main"}

[tool.pdm.build]
package-dir = "."
includes = [
    "cement/",
    "cement/cli/templates/generate/",
    "CONTRIBUTORS.md",
    "CHANGELOG.md"
]
excludes = ["tests/"]

[tool.pdm.version]
source = "call"
getter = "cement.utils.version:get_version"


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "coverage>=7.13.5",
    "mypy~=1.20.2",
    "ruff~=0.15.12",
    "mock>=5.1.0",
    "pypng>=0.20220715.0",
    "requests>=2.31.0",
    "commitizen>=4.10.1",
]
