# Generated project — pdm-backend toolchain.
# Single source of truth for build, metadata, runtime deps, and dev deps.

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "{{ label }}"
description = "{{ description }}"
authors = [{name = "{{ creator }}", email = "{{ creator_email }}"}]
license = {text = "{{ license }}"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "cement[jinja2,yaml,colorlog]~={{ cement.major_version }}.{{ cement.minor_version }}.0",
]

[project.urls]
Homepage = "{{ url }}"

[project.scripts]
{{ label }} = "{{ label }}.main:main"

[tool.pdm.version]
source = "file"
path = "{{ label }}/core/version.py"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "twine>=1.11.0",
    "ruff~=0.15.12",
    "mypy~=1.20.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov={{ label }} --cov-report=term --cov-report=html:coverage-report tests/"
python_files = "test_*.py"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "FA",  # flake8-future-annotations
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
# The Cement handler/Meta pattern exposes attributes dynamically (e.g.
# ``self.app.args.print_help()`` resolves to the concrete argparse handler,
# not the ArgumentHandler interface). Cement's own config disables this code
# for the same reason.
disable_error_code = ["attr-defined"]
files = ["{{ label }}/", "tests/"]
